...
enum PlaceRatingExplanation: String, CaseIterable, Identifiable {
    case ratings

    var id: String { rawValue }

    var title: String {
        "Ratings"
    }

    var message: String {
        paragraphs.joined(separator: " ")
    }

...
